Version 2.11.9: Fix a minor CSS issue
The text would be cropped a bit on the bottom because of this height
limitation

--- a/modules/mtl-proposal-list/mtl-proposal-list.css
+++ b/modules/mtl-proposal-list/mtl-proposal-list.css
@@ -195,7 +195,6 @@
 }
 
 #content .mtl-post-tile .entry-meta {
-	height:18px;
 	overflow:hidden;
 }
 
